float overflow fix

--- a/wp-content/plugins/wikinfo/src/style.scss
+++ b/wp-content/plugins/wikinfo/src/style.scss
@@ -8,7 +8,7 @@
 @import url("https://fonts.googleapis.com/css2?family=EB+Garamond&family=Open+Sans&display=swap");
 
 .wikinfo {
-    display: block;
+    display: flow-root;
     background-color: #fff;
     border: 1px solid #ede4ce;
     border-radius: 1rem;
